fixed header to top of the page on Work and Contact pages
Note - need to fix footer on About Me page so that it doesn't overlap with the skills table

--- a/css/style.css
+++ b/css/style.css
@@ -155,8 +155,7 @@ button:focus,
   flex-direction: column;
   text-align: center;
   position: relative;
-  top: 150px;
-
+  top: 40px;
 }
 
 .page-header {
@@ -185,11 +184,13 @@ button:focus,
 @supports (display: grid) {
   .grid {
     display: grid;
-
     /* grid-template-columns: 300px 300px 300px; fractions are better than pixels - they are responsive */
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
-    margin: 0;
+    /* margin: 0; */
+    margin-top: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
   .grid__item {
@@ -210,12 +211,14 @@ button:focus,
 @media all and (max-width: 500px) {
   .grid {
     grid-template-columns: 1fr;
+    margin-top: 100px;
   }
 }
 
 @media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
     grid-template-columns: 1fr 1fr;
+    margin-top: 60px;
   }
 }
 
